--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,13 @@ header {
 	margin-top: 33px;
 	border: none;
 	cursor: pointer;
+	-webkit-transition: 0.2s;
+	-o-transition: 0.2s;
+	transition: 0.2s;
+}
+
+.header-button:hover {
+	box-shadow: none;
 }
 
 header small {
@@ -177,6 +184,14 @@ footer {
 	border-radius: 50px;
 	padding: 12px 40px;
 	cursor: pointer;
+	-webkit-transition: 0.2s;
+	-o-transition: 0.2s;
+	transition: 0.2s;
+}
+
+.footer-button:hover {
+	background-color: #fff;
+	color: #3a7dfd;
 }
 
 @media (max-width: 1200px) {
